--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,22 @@
 [build-system]
-requires = ["setuptools>=61.0"]
-build-backend = "setuptools.build_meta"
-
-[tool.setuptools]
-py-modules = ["fast_rlm"]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [project]
-name = "rlm"
+name = "fast-rlm"
 version = "0.1.0"
-description = "Add your description here"
+description = "Recursive Language Model — fast agentic LLM orchestration"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "datasets==3.6.0",
-    "dspy>=3.1.3",
-    "markdownify>=1.2.2",
-    "rich>=14.3.2",
-    "wikipedia>=1.4.0",
+    "pyyaml>=6.0",
 ]
+
+[tool.hatch.build.targets.wheel]
+packages = ["fast_rlm"]
+
+[tool.hatch.build.targets.wheel.force-include]
+"src" = "fast_rlm/_engine/src"
+"deno.json" = "fast_rlm/_engine/deno.json"
+"deno.lock" = "fast_rlm/_engine/deno.lock"
+"rlm_config.yaml" = "fast_rlm/_engine/rlm_config.yaml"
