--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "hatchling.build"
 
 [project]
 name = "fast-rlm"
-version = "0.1.4"
-description = "Recursive Language Model"
+version = "0.1.5"
+description = "Light-dependency, Feature-Rich Implementation of Recursive Language Models"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
